# ray_tracing

./: Cargo.toml  image.ppm
src/: camera.rs  color.rs  hitable.rs  main.rs  material.rs  ray.rs  vec3.rs
src/utils/: utils.rs
