[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/MaxGroshev/ray_tracing.git"
description = "Trace rays"

[dependencies]
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true